# dvd-ai-pc-rag

./: .env.example  .gitignore  README.md  electron-builder.yml  package.json  requirements-intel.txt  requirements.txt
app/: background.js
cpp/openvino_genai_chat/: CMakeLists.txt  openvino_genai_chat.cpp
cpp/qnn_genai_chat/: ChatApp.cpp  ChatApp.hpp  ChatApp.vcxproj  Main.cpp  PromptHandler.cpp  PromptHandler.hpp
main/: background.ts
main/modules/: genai.js  rag-ingest.js  rag.js
python/: rag-embed.py  wiki_loader.py
renderer/: tailwind.config.ts  tsconfig.json
renderer/components/: Assistant.tsx
renderer/components/ui/: tooltip.tsx
renderer/components/ui/assistant-ui/: LastMessageHook.tex
renderer/data/: suggestions-source.json
renderer/pages/: home.tsx
